# rust_matrix_rain

./: .gitattributes  .gitignore  Cargo.toml  README.md  main.rs  stats.rs
src/: rain.rs
